force-app/main/default/objects/Ownership__c/Ownership__c.object-meta.xml
<CustomObject>
    <description>Junction object used to denote what percentage of a business an individual owns.</description>
    <label>Ownership</label>
    <nameField>
        <displayFormat>OWN-{00000000}</displayFormat>
        <label>Ownership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ownership</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>