force-app/main/default/objects/Ownership__c/fields/ATI_Number__c.field-meta.xml
<CustomField>
    <fullName>ATI_Number__c</fullName>
    <description>Enter ATI Number</description>
    <label>ATI Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>