force-app/main/default/objects/Ownership__c/fields/Attachment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Identifier__c</fullName>
    <description>build formula to produce the value needed to generate attachment requests from ownership. This value should match the attachment identifer value on the attachment bank record</description>
    <formula>IF (  Ownership_Percentage__c &gt; 0, 'SH', '')
&amp;
IF(Registration__r.RecordType.DeveloperName == 'Talent_Agency', ';TA-DL;TA-PR;TA-AC', '')
&amp;
IF(Registration__r.RecordType.DeveloperName == 'Garment_Manufacturers_and_Contractors', ';GA-OWNER-DL', '')
&amp;
IF(Registration__r.RecordType.DeveloperName == 'Farm_Labor_Contractor', ';FLC-OWNER-DL;FLC-OWN-SHP;FLC-OWNER-PHOTO', '')</formula>
    <label>Attachment Identifier</label>
    <type>Text</type>
</CustomField>