force-app/main/default/objects/Ownership__c/fields/Date_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Deactivated__c</fullName>
    <description>Date field to denote that the Ownership record was deactivated.</description>
    <label>Date Deactivated</label>
    <type>Date</type>
</CustomField>