force-app/main/default/objects/Ownership__c/fields/Daytime_Phone__c.field-meta.xml
<CustomField>
    <fullName>Daytime_Phone__c</fullName>
    <description>Map to Phone on Account</description>
    <inlineHelpText>Phone number must be 10 numbers (no dashes or spaces.)</inlineHelpText>
    <label>Residential Phone</label>
    <type>Phone</type>
</CustomField>