force-app/main/default/objects/Ownership__c/fields/Exam_Language__c.field-meta.xml
<CustomField>
    <fullName>Exam_Language__c</fullName>
    <description>Used for Owners</description>
    <inlineHelpText>Select Exam Language</inlineHelpText>
    <label>Exam Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>