force-app/main/default/objects/Ownership__c/fields/Exam_Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Passed_Date__c</fullName>
    <description>Enter date of exam passed</description>
    <inlineHelpText>Enter date of Exam passed.</inlineHelpText>
    <label>Exam Passed Date</label>
    <type>Date</type>
</CustomField>