force-app/main/default/objects/Ownership__c/fields/Have_you_passed_the_exam__c.field-meta.xml
<CustomField>
    <fullName>Have_you_passed_the_exam__c</fullName>
    <description>Exam passed or fail</description>
    <inlineHelpText>Have you passed the exam?</inlineHelpText>
    <label>Have you passed the exam?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>