force-app/main/default/objects/Ownership__c/fields/I_am_this_owner__c.field-meta.xml
<CustomField>
    <fullName>I_am_this_owner__c</fullName>
    <defaultValue>"No"</defaultValue>
    <description>Allows the applicant to note that they are the owner who's information is being entered</description>
    <inlineHelpText>Select "Yes" or "No" to indicate if the name and address for the login account matches this owner</inlineHelpText>
    <label>I am this person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>