force-app/main/default/objects/Ownership__c/fields/Last_Exam_Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Exam_Passed_Date__c</fullName>
    <description>Get exam passed date from Registration Exam object</description>
    <inlineHelpText>Last Exam Pass Date for this owner.</inlineHelpText>
    <label>Last Exam Passed Date</label>
    <summarizedField>Registration_Exam__c.Exam_Passed_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Registration_Exam__c.Exam_Disposition__c</field>
        <operation>equals</operation>
        <value>Passed</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Exam__c.Ownership__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>