force-app/main/default/objects/Ownership__c/fields/Latest_Exam_Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Exam_Passed_Date__c</fullName>
    <description>Update latest exam pass date from registrations exams object when exam entered or updated with Registration Exam flow</description>
    <label>Latest Exam Passed Date</label>
    <type>Date</type>
</CustomField>