force-app/main/default/objects/Ownership__c/fields/Live_Scan_Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>Live_Scan_Operator_Name__c</fullName>
    <description>Enter Live Scan Operator Name</description>
    <label>Live Scan Operator Name</label>
    <length>36</length>
    <type>Text</type>
</CustomField>