force-app/main/default/objects/Ownership__c/fields/LSID_Number__c.field-meta.xml
<CustomField>
    <fullName>LSID_Number__c</fullName>
    <description>Enter LSID Number</description>
    <label>LSID Number</label>
    <length>36</length>
    <type>Text</type>
</CustomField>