force-app/main/default/objects/Ownership__c/fields/Mailing_Address_Same_as_Residential__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Same_as_Residential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Address Same as Residential</label>
    <type>Checkbox</type>
</CustomField>