force-app/main/default/objects/Ownership__c/fields/Occupation_1_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Occupation_1_Start_Date__c</fullName>
    <description>Start Date of Owner's 1st occupation</description>
    <inlineHelpText>Enter Start date of Owner's 1st Occupation</inlineHelpText>
    <label>Occupation 1 Start Date</label>
    <type>Date</type>
</CustomField>