force-app/main/default/objects/Ownership__c/fields/Occupation_2_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Occupation_2_End_Date__c</fullName>
    <description>Used to enter Owner's 2nd Occupation End date</description>
    <inlineHelpText>Enter Owner's 2nd Occupation End Date</inlineHelpText>
    <label>Occupation 2 End Date</label>
    <type>Date</type>
</CustomField>