force-app/main/default/objects/Ownership__c/fields/Occupation_2_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Occupation_2_Start_Date__c</fullName>
    <description>Used to enter Owner's 2nd occupation Start Date</description>
    <inlineHelpText>Enter Owner's 2nd Occupation Start Date</inlineHelpText>
    <label>Occupation 2 Start Date</label>
    <type>Date</type>
</CustomField>