force-app/main/default/objects/Ownership__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Individual who owns all or a portion of the Company.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ownership</relationshipLabel>
    <relationshipName>Ownership</relationshipName>
    <type>Lookup</type>
</CustomField>