force-app/main/default/objects/Ownership__c/fields/Owner_Occupation_1__c.field-meta.xml
<CustomField>
    <fullName>Owner_Occupation_1__c</fullName>
    <description>Used to enter Owner's Occupation</description>
    <inlineHelpText>Enter Occupation</inlineHelpText>
    <label>Owner Occupation 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>