force-app/main/default/objects/Ownership__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Ownership</relationshipLabel>
    <relationshipName>Ownership</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>