force-app/main/default/objects/Ownership__c/fields/Request_FLC_Card__c.field-meta.xml
<CustomField>
    <fullName>Request_FLC_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to request for a FLC Card for a owner.</description>
    <inlineHelpText>Check to request a card</inlineHelpText>
    <label>Request FLC Card</label>
    <type>Checkbox</type>
</CustomField>