force-app/main/default/objects/Ownership__c/fields/Residential_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address_Line_2__c</fullName>
    <label>Residential Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>