force-app/main/default/objects/Ownership__c/fields/Spouse_s_Capacity_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Spouse_s_Capacity_in_Business__c</fullName>
    <description>Used for Owners</description>
    <inlineHelpText>Enter Spouse's Capacity in Business</inlineHelpText>
    <label>Spouse's Capacity in Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>