force-app/main/default/objects/Ownership__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Mapped to Person Account street</description>
    <inlineHelpText>P.O. Box address is not allowed.</inlineHelpText>
    <label>Residential Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>