force-app/main/default/objects/Ownership__c/validationRules/Address_cannot_have_PO_Box.validationRule-meta.xml
<ValidationRule>
    <fullName>Address_cannot_have_PO_Box</fullName>
    <active>true</active>
    <description>Does not allow P.O Boxes to be added in address fields.</description>
    <errorConditionFormula>/* Evaluate in these conditions */
(
 (/* Exempt new imported records */
  !ISNEW() &amp;&amp; !ISBLANK(TEXT (Imported_From__c))
 )

/* Or the field value has changed */
||
ISCHANGED ( Street__c )
||
ISCHANGED ( Residential_Address_Line_2__c )
)

&amp;&amp;
/* Core of validation rule */
(
OR( 
CONTAINS( Street__c , "PO BOX"), 
CONTAINS( Residential_Address_Line_2__c, "PO BOX"), 
CONTAINS( Street__c , "P.O Box"), 
CONTAINS( Residential_Address_Line_2__c, "P.O Box"), 
CONTAINS( Street__c, "P.O. Box"), 
CONTAINS( Residential_Address_Line_2__c, "P.O. Box"), 
CONTAINS( Street__c, "po box"), 
CONTAINS( Residential_Address_Line_2__c, "po box"), 
CONTAINS( Street__c, "P.O. box"), 
CONTAINS( Residential_Address_Line_2__c, "P.O. box"), 
CONTAINS( Street__c, "p.o. box"), 
CONTAINS( Residential_Address_Line_2__c, "p.o. box"), 
CONTAINS( Street__c, "PO Box"), 
CONTAINS( Residential_Address_Line_2__c, "PO Box"),
CONTAINS( Street__c, "P. O. Box"), 
CONTAINS( Residential_Address_Line_2__c, "P. O. Box"),
CONTAINS( Street__c, "p. o. box"), 
CONTAINS( Residential_Address_Line_2__c, "p o box"),
CONTAINS( Street__c, "p o box"), 
CONTAINS( Residential_Address_Line_2__c, "p o box"),
CONTAINS( Street__c, "P.O. BOX"), 
CONTAINS( Residential_Address_Line_2__c, "P.O. BOX"),
CONTAINS( Street__c, "P. O. BOX"), 
CONTAINS( Residential_Address_Line_2__c, "P. O. BOX"),
CONTAINS( Residential_Address_Line_2__c, "P.O.Box"),
CONTAINS( Street__c, "P.O.Box"), 
CONTAINS( Residential_Address_Line_2__c, "P.O.Box")       
)
)</errorConditionFormula>
    <errorMessage>P.O. Boxes are not accepted addresses. Please change to a physical location before moving forward.</errorMessage>
</ValidationRule>