force-app/main/default/objects/Ownership__c/validationRules/Deactivated_records_cannot_reactivate.validationRule-meta.xml
<ValidationRule>
    <fullName>Deactivated_records_cannot_reactivate</fullName>
    <active>true</active>
    <description>An Ownership record cannot be reactivated after it is deactivated.</description>
    <errorConditionFormula>NOT(CONTAINS($Profile.Name,'System Administrator')) &amp;&amp; ISCHANGED(Status__c) &amp;&amp;  ISPICKVAL(PRIORVALUE(Status__c), 'Inactive')</errorConditionFormula>
    <errorMessage>This Ownership record may not be reactivated.</errorMessage>
</ValidationRule>