force-app/main/default/objects/Ownership__c/validationRules/ownership_100_max.validationRule-meta.xml
<ValidationRule>
    <fullName>ownership_100_max</fullName>
    <active>true</active>
    <errorConditionFormula>Ownership_Percentage__c &gt; 1</errorConditionFormula>
    <errorMessage>Ownership percentage cannot be greater than 100</errorMessage>
</ValidationRule>