force-app/main/default/objects/Ownership__c/validationRules/Require_formatting_for_US_zip_codes.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_formatting_for_US_zip_codes</fullName>
    <active>true</active>
    <errorConditionFormula>/* Evaluate in these conditions */
(
 (/* Exempt new imported records */
  ISNEW() &amp;&amp; !ISBLANK(TEXT (Imported_From__c))
 )

/* Or the field value has changed */
||
ISCHANGED ( Residential_Zip_Code__c )
||
ISCHANGED ( Mailing_Zip_Code__c )
)

&amp;&amp;
/* Core of validation rule */
(
!ISBLANK ( Residential_Zip_Code__c) 
&amp;&amp; ISPICKVAL ( Residential_Country__c , 'United States of America')
&amp;&amp; !REGEX(Residential_Zip_Code__c,"\\d{5}(-\\d{4})?")
)
||
(
!ISBLANK ( Mailing_Zip_Code__c ) 
&amp;&amp; ISPICKVAL ( Mailing_Country__c , 'United States of America')
&amp;&amp; !REGEX(Mailing_Zip_Code__c,"\\d{5}(-\\d{4})?")
)</errorConditionFormula>
    <errorMessage>U.S. Zip codes must have 5 digits or 9 digits with a dash between the 5th and 6th digit.</errorMessage>
</ValidationRule>