force-app/main/default/objects/Ownership__c/validationRules/Required_fields_on_FLC_owner_records.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields_on_FLC_owner_records</fullName>
    <active>true</active>
    <description>This is to make required fields on the VIP Form Tool.</description>
    <errorConditionFormula>Registration__r.Record_Type_Name__c = 'Farm_Labor_Contractor' &amp;&amp; NOT(CONTAINS($Profile.Name,'System Administrator')) &amp;&amp; ((First_Name__c = '' ||  Last_Name__c = '' || ISBLANK(Ownership_Percentage__c) || SSN__c = '' ||  ISNULL(Date_of_Birth__c) || Email__c = '' ||  Live_Scan_Operator_Name__c = '' ||  ATI_Number__c = '' ||  ISBLANK(LSID_Number__c) || ISNULL(Date_Completed__c) || Street__c = '' ||  City__c = '' || Residential_Zip_Code__c = '') || IF(Mailing_Address_Same_as_Residential__c, FALSE, Mailing_Street__c = '' || Mailing_City__c = '' ||  Mailing_Zip_Code__c = ''))</errorConditionFormula>
    <errorMessage>Please enter all required fields for the owner.</errorMessage>
</ValidationRule>