force-app/main/default/objects/Ownership__c/validationRules/SSN_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Verification</fullName>
    <active>true</active>
    <description>Ensures that Re-type SSN is the same as the SSN entered.</description>
    <errorConditionFormula>/* Evaluate in these conditions */
(
 (/* Exempt new imported records */
  !ISNEW() &amp;&amp; !ISBLANK(TEXT (Imported_From__c))
 )

/* Or the field value has changed */
||
ISCHANGED ( SSN__c )
)

&amp;&amp;
/* Core of validation rule */

AND( 
NOT(ISBLANK(SSN__c)), 
NOT(ISBLANK( Re_type_SSN__c )), 
SSN__c &lt;&gt; Re_type_SSN__c 
)</errorConditionFormula>
    <errorMessage>Please ensure that SSN and Re-typed SSN match.</errorMessage>
</ValidationRule>